Fix map conversion for batch status updates